--- a/server/views/layout.jade
+++ b/server/views/layout.jade
@@ -1,9 +1,11 @@
 doctype html
 html
   head
-    title= title
-    link(rel='stylesheet', href='//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css')
-    link(rel='stylesheet', href='/stylesheets/style.css')
-  body
+    title Pricer - It's going to be awesome
+    link(rel='stylesheet', href='/stylesheets/main.css')
+
+  body(ng-app="ckApp")
     block content
-    script(src='javascripts/bundle.js')
+    block scripts
+      script(src='javascripts/bundle.js')
+    
