--- a/public/stylesheets/base/base.styl
+++ b/public/stylesheets/base/base.styl
@@ -4,15 +4,15 @@
   box-sizing: border-box
 
 html
+  overflow-y: scroll
+
+body
+  background-color: $color-grey-light
   font-family: $font-family-base
   font-size: $font-size-base
   line-height: $line-height-base
   -webkit-font-smoothing: antialiased
   color: $color-font-base
-
-body
-  max-width: 1280px
-  margin: 0 auto
 
 h1,
 h2,
