--- a/public/stylesheets/base/typography.styl
+++ b/public/stylesheets/base/typography.styl
@@ -1,12 +1,11 @@
 
-@import url("http://fonts.googleapis.com/css?family=Droid+Serif:400,700")
-
 $font-family-base = 'Droid Serif', serif;
 
 $font-size-base = 13px
-$line-height-base = 1.5
+$line-height-base = 1.5rem
 
 $spacing = 1.5rem
+$spacing-small = ($spacing/2)
 
 h1,
 .alpha
@@ -32,5 +31,12 @@ h6,
 .zeta
   font-size: 75%
 
-.tight
-  margin-bottom: ($spacing/4)
+
+.x-large
+  font-size: 700%;
+
+.heading
+  font-weight: 100
+  line-height: 1
+  padding-top: .25em
+  padding-bottom: .25em
