--- a/server/views/layout.jade
+++ b/server/views/layout.jade
@@ -4,7 +4,8 @@ html
     title Pricer - It's going to be awesome
     link(rel='stylesheet', href='/stylesheets/main.css')
 
-  body(ng-app="ckApp")
+  body.landmark(ng-app="pApp")
+    h1.x-large.align-center.heading pricer,-
     block content
     block scripts
       script(src='javascripts/bundle.js')
