--- a/public/stylesheets/main.styl
+++ b/public/stylesheets/main.styl
@@ -1,7 +1,10 @@
+@import url("http://fonts.googleapis.com/css?family=Droid+Serif:400,700")
 
+@require 'normalize.css/normalize.css'
 
 @require 'base/typography'
 @require 'base/colors'
 @require 'base/base'
+@require 'base/helpers'
 
 @require 'modules/*'
