--- a/public/stylesheets/modules/tile.styl
+++ b/public/stylesheets/modules/tile.styl
@@ -1,4 +1,21 @@
 
 .tile
-  flex: 0 1 300px
+  background: #fff;
+  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.2);
+  border-radius: 3px;
+  margin: $spacing-small;
+  overflow: hidden
+  padding: $spacing-small
   text-align: center
+
+.tile__image
+  margin-bottom: $spacing-small
+
+  img
+    width: 100%
+    display: block
+    margin: 0 auto
+    vertical-align: middle
+
+.price
+  font-weight: bold
