--- a/client/products/products.list.jade
+++ b/client/products/products.list.jade
@@ -1,4 +1,5 @@
 div(data-flex)
+  {{products}}
   div(data-flex-item, 
       ng-repeat="product in products | filter: filterSettings | limitTo: 10")
 
