--- a/public/stylesheets/modules/facets.styl
+++ b/public/stylesheets/modules/facets.styl
@@ -4,10 +4,5 @@
   padding-left: 0
   margin-bottom: 0
 
-  li
-    display: inline-block
-
 .facets--sub
-  position: absolute
-  bottom: 0
-  transform: translateX(100%)
+  padding-left: $spacing
