--- a/public/stylesheets/base/helpers.styl
+++ b/public/stylesheets/base/helpers.styl
@@ -1,5 +1,3 @@
-
-
 .flush
   margin-bottom: 0;
 
@@ -17,3 +15,9 @@
 
 .inline
   display: inline-block
+
+.left
+  float: left
+
+.right
+  float: right
