--- a/client/filter/filter.index.jade
+++ b/client/filter/filter.index.jade
@@ -1,11 +1,17 @@
 ul.facets.sidebar.left
   li
-    a(ui-sref='index.products({category: ''})') Alle
+    a(ui-sref='index.products()') Alle
   li(ng-repeat="category in filter.categories")
     a(ui-sref='index.products({category: category._id})') {{category._id}}
     ul.facets.facets--sub
       li( ng-repeat="subCategory in category.subCategories", 
-          ng-if="category._id === filterSettings.category")
-        button {{subCategory}}
+          ng-if="category._id === $stateParams.category")
+        a(ui-sref='index.products.subCategories({subCategory: subCategory})') {{subCategory}}
 
 ui-view
+
+
+div.dev.align-center
+  | $state = {{$state.current.name}} | 
+  | $stateParams = {{$stateParams}} | 
+  | $state full url = {{ $state.$current.url.source }}
