--- a/public/stylesheets/main.styl
+++ b/public/stylesheets/main.styl
@@ -8,3 +8,12 @@
 @require 'base/helpers'
 
 @require 'modules/*'
+
+
+.dev
+  position: fixed
+  bottom: 0
+  left: 0
+  width: 100%
+  background-color: rgba(255, 255, 255, .95)
+  padding: $spacing/2
