--- a/server/views/layout.jade
+++ b/server/views/layout.jade
@@ -2,7 +2,8 @@ doctype html
 html
   head
     title Pricer - It's going to be awesome
-    link(rel='stylesheet', href='/stylesheets/main.css')
+    link(rel='stylesheet' href='/stylesheets/main.css')
+    meta(name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no")
 
   body.landmark(ng-app="pApp")
     h1.x-large.align-center.heading pricer,-
