--- a/server/views/layout.jade
+++ b/server/views/layout.jade
@@ -9,5 +9,5 @@ html
     h1.x-large.align-center.heading pricer,-
     block content
     block scripts
-      script(src='javascripts/bundle.js')
+      script(src='js/bundle.js')
     
