--- a/static/stylesheets/main.styl
+++ b/static/stylesheets/main.styl
@@ -15,5 +15,5 @@
   bottom: 0
   left: 0
   width: 100%
-  background-color: rgba(255, 255, 255, .95)
-  padding: $spacing/2
+  background-color: tomato
+  padding: ($spacing/2)
