--- a/static/stylesheets/modules/tile.styl
+++ b/static/stylesheets/modules/tile.styl
@@ -1,9 +1,7 @@
 
 .tile
-  background: #fff;
-  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.2);
-  border-radius: 3px;
-  margin: $spacing-small;
+  @extends $tile-style
+  margin: $spacing-small
   overflow: hidden
   padding: $spacing-small
   text-align: center
