--- a/client/filter/filter.index.jade
+++ b/client/filter/filter.index.jade
@@ -1,18 +1,22 @@
-.sidebar
-  ul.facets.left
+.sidebar.left
+  ul.facets
     li
-      a(ui-sref='index.products') Alle
+      a.label(ui-sref="index.products"
+              ng-class="{'is-active': $state.current.name == 'index.products'}") 
+        | Alle
 
     li(ng-repeat="category in filter.categories")
-      a(ui-sref='index.products.category({category: category._id})') {{category._id}}
+      a.label(ui-sref="index.products.category({category: category._id})"
+              ng-class="{'is-active': category._id === $stateParams.category}")
+        | {{category._id}}
       ul.facets.facets--sub
-        li( ng-repeat="subCategory in category.subCategories", 
-            ng-if="category._id === $stateParams.category")
-          a(ui-sref='index.products.category.subCategory({subCategory: subCategory})') {{subCategory}}
+        li( ng-if="category._id === $stateParams.category"
+            ng-repeat="subCategory in category.subCategories")
+          a.label(ui-sref="index.products.category.subCategory({subCategory: subCategory})"
+                  ng-class="{'is-active': subCategory === $stateParams.subCategory}")
+            | {{subCategory}}
 
 ui-view.content
-
-
 div.dev.align-center
   | $state = {{$state.current.name}} | 
   | $stateParams = {{$stateParams}} | 
