--- a/static/stylesheets/base/base.styl
+++ b/static/stylesheets/base/base.styl
@@ -33,5 +33,9 @@ figure,
 pre,
 select,
 hr
-  margin-bottom: $spacing;
-  margin-top: 0;
+  margin-bottom: $spacing
+  margin-top: 0
+
+a 
+  text-decoration: none
+  color: inherit
