--- a/static/stylesheets/base/helpers.styl
+++ b/static/stylesheets/base/helpers.styl
@@ -21,3 +21,8 @@
 
 .right
   float: right
+
+$tile-style
+  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.2)
+  background-color: #fff
+  border-radius: 3px
