--- a/static/stylesheets/base/base.styl
+++ b/static/stylesheets/base/base.styl
@@ -13,6 +13,7 @@ body
   line-height: $line-height-base
   -webkit-font-smoothing: antialiased
   color: $color-font-base
+  margin-top: $spacing
 
 h1,
 h2,
