--- a/static/stylesheets/base/colors.styl
+++ b/static/stylesheets/base/colors.styl
@@ -1,4 +1,8 @@
 
-$color-font-base = rgb(51, 51, 51)
+$color-primary = #EB5E4C
+$color-secondary = #352F2B
 
-$color-grey-light = darken(#fff, 10%)
+$color-font-base = $color-secondary 
+
+$color-grey-light = darken(#fff, 5%)
+
