--- a/static/stylesheets/base/helpers.styl
+++ b/static/stylesheets/base/helpers.styl
@@ -22,7 +22,9 @@
 .right
   float: right
 
+$box-shadow-base = 0 1px 1px 0 rgba(0, 0, 0, 0.2)
+
 $tile-style
-  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.2)
+  box-shadow: $box-shadow-base 
   background-color: #fff
   border-radius: 3px
