--- a/static/stylesheets/main.css
+++ b/static/stylesheets/main.css
@@ -471,12 +471,13 @@ html {
   overflow-y: scroll;
 }
 body {
-  background-color: #e6e6e6;
+  background-color: #f2f2f2;
   font-family: 'Droid Serif', serif;
   font-size: 13px;
   line-height: 1.5rem;
   -webkit-font-smoothing: antialiased;
-  color: #333;
+  color: #352f2b;
+  margin-top: 1.5rem;
 }
 h1,
 h2,
@@ -538,23 +539,28 @@ a {
 .facets {
   list-style: none;
   padding-left: 0;
-  margin-bottom: 0;
+  margin-bottom: 0.75rem;
+  text-align: center;
+  border-bottom: 1px dashed #dad5d1;
 }
 .facets li {
+  display: inline-block;
   margin-bottom: 0.75rem;
-}
-.facets--sub {
-  padding-left: 0.75rem;
-  margin-top: 0.75rem;
+  margin-right: 0.375rem;
+  margin-left: 0.375rem;
 }
 .label {
+  position: relative;
+  top: -1px;
+  line-height: 1;
   display: inline-block;
-  padding: 0.25em 0.5em;
+  padding: 0.8em;
 }
 .label.is-active {
-  -webkit-transition: 0.25s background-color;
-  transition: 0.25s background-color;
-  background-color: #ff6347;
+  -webkit-transition: 0.25s -webkit-box-shadow;
+  transition: 0.25s box-shadow;
+  -webkit-box-shadow: 0 1px 1px 0 rgba(0,0,0,0.2), 0 2px 5px 0 rgba(235,94,76,0.75);
+  box-shadow: 0 1px 1px 0 rgba(0,0,0,0.2), 0 2px 5px 0 rgba(235,94,76,0.75);
 }
 [data-flex] {
   display: -webkit-box;
@@ -577,6 +583,55 @@ a {
 }
 .range {
   text-align: center;
+  max-width: 500px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 1.5rem;
+}
+.range__input {
+  display: inline-block;
+  width: 50%;
+  margin-left: 1.5rem;
+  margin-right: 1.5rem;
+}
+.range__min,
+.range__max {
+  display: inline-block;
+  font-size: 80%;
+  color: rgba(53,47,43,0.8);
+}
+.range__current {
+  margin-top: 0;
+}
+input[type='range'] {
+  -webkit-appearance: none;
+  background-color: #dfdad7;
+  border-radius: 25em;
+  height: 5px;
+  top: -2px;
+  position: relative;
+}
+input[type='range']:active,
+input[type='range']:focus {
+  outline: none;
+}
+::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  background-color: #352f2b;
+  border: 0.2em solid #352f2b;
+  border-radius: 100%;
+  -webkit-box-shadow: 0 1px 1px 0 rgba(0,0,0,0.2);
+  box-shadow: 0 1px 1px 0 rgba(0,0,0,0.2);
+  width: 1.75em;
+  height: 1.75em;
+  cursor: -webkit-grab;
+}
+::-webkit-slider-thumb:before {
+  content: '';
+  display: block;
+  width: 10px;
+  height: 10px;
+  position: relative;
 }
 .sidebar {
   height: 100%;
@@ -602,6 +657,7 @@ a {
 }
 .dev {
   position: fixed;
+  display: none;
   bottom: 0;
   left: 0;
   width: 100%;
